--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -3,10 +3,20 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+body {
+    font-family: "PT Sans", sans-serif;
+}
+
 h1,
 h2,
 h3 {
     color: rgb(54, 54, 54);
+}
+
+h3, h4 {
+    font-weight: 400;
+    color:  rgb(100, 100, 100);
 }
 
 @import "./song";
