--- a/src/styles/_library.scss
+++ b/src/styles/_library.scss
@@ -21,7 +21,7 @@
         width: 30%;
     }
     &:hover {
-        background: rgb(224, 224, 224);
+        background: rgb(240, 240, 240);
     }
 }
 
@@ -51,4 +51,8 @@
 *::-webkit-scrollbar-thumb {
     background-color: rgba(155, 155, 155, 0.5);
     border: transparent;
+}
+
+.selected {
+    background: rgba(187, 255, 252, 0.562);
 }
