--- a/src/styles/_library.scss
+++ b/src/styles/_library.scss
@@ -7,6 +7,9 @@
     background-color: white;
     box-shadow: 2px 2px 50px rgb(184, 184, 184);
     overflow: scroll;
+    transform: translateX(-100%);
+    transition: all 0.5s ease;
+    opacity: 0;
     h2 {
         padding: 2rem;
     }
