--- a/src/styles/_player.scss
+++ b/src/styles/_player.scss
@@ -40,11 +40,10 @@ input[type="range"]::-webkit-slider-thumb {
     -webkit-appearance: none;
     height: 16px;
     width: 16px;
-    background: black;
 }
 
 .track {
-    background: lightblue;
+    background: rgb(64, 120, 243);
     width: 100%;
     height: 1rem;
     position: relative;
