--- a/src/styles/_player.scss
+++ b/src/styles/_player.scss
@@ -42,6 +42,12 @@ input[type="range"]::-webkit-slider-thumb {
     width: 16px;
 }
 
+input[type="range"]::-moz-range-thumb{
+    -webkit-appearance: none;
+    background: transparent;
+    border: none;
+}
+
 .track {
     background: rgb(64, 120, 243);
     width: 100%;
